# dataset_generator

./: LICENSE  README.md  example.json  pyproject.toml  requirements.txt
dataset_generator/: __main__.py  dataset_generator.py
dataset_generator/DatasetDef/: __init__.py  dataset_dict.py
dataset_generator/Exporter/: __init__.py  exporter.py
dataset_generator/Generator/: generator.py
dataset_generator/Loaders/: __init__.py  loaders.py
